[package]
name = "jobcan-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["cookies"] }
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "tls-rustls",
    "runtime-tokio",
    "migrate",
] }
