[package]
name = "jobcan-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "tls-rustls",
    "runtime-tokio",
    "migrate",
] }
tokio = { version = "1.38.0", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
